# lilbug

./: .gitignore  .rusty-hook.toml  AGENTS.md  Cargo.toml  PROMPT.md  README.md  rust-toolchain.toml
crates/lilbug-cli/: Cargo.toml
crates/lilbug-cli/src/: main.rs
crates/lilbug-core/: Cargo.toml
crates/lilbug-core/src/: lib.rs
crates/lilbug-emulator/: Cargo.toml
crates/lilbug-emulator/src/: main.rs
docs/: local-development.md
docs/adr/: 0001-use-rust-and-esp-idf-hal.md  0002-use-usb-cli-for-provisioning-and-config.md  0003-use-mqtt-for-runtime-cues.md  0004-use-a-native-only-software-emulator.md  0005-use-docker-compose-for-local-mqtt-development.md  0006-add-a-debug-admin-interface-for-config-state-and-frame-access.md  0007-support-local-render-and-streamed-frame-override-modes.md  0008-share-inspection-and-admin-semantics-over-usb-and-wi-fi.md  0009-use-onboard-persistent-storage-for-core-device-config.md  0010-use-https-and-bearer-token-auth-for-rev1-control-plane.md  0011-use-emulator-startup-modes-for-bootstrap-and-wifi-flows.md  0012-define-the-rev1-http-api-surface.md  0013-define-rev1-command-grammar.md  0014-define-the-local-cli-config-file.md  0015-separate-motion-and-face-command-lanes.md
