[workspace]
members = [
    "crates/lilbug-core",
    "crates/lilbug-cli",
    "crates/lilbug-emulator",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "=0.6.20", features = ["json"] }
axum-server = { version = "=0.5.1", features = ["tls-rustls"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
font8x8 = "0.3"
hex = "0.4"
minifb = "0.27"
png = "0.17"
rand = "0.9"
rcgen = "=0.12.1"
reqwest = { version = "=0.11.27", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.15"
tokio = { version = "1.43", features = ["full"] }
