[package]
name = "lilbug-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lilbug"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
lilbug-core = { path = "../lilbug-core" }
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
